--- a/index.html
+++ b/index.html
@@ -360,6 +360,12 @@
     </ul>
   </footer>
 
+  <!-- backlinks -->
+  <a title="backlinks" class="hidden" href="http://www.alexa.com/siteinfo/as-salam-college.netlify.app"></a>
+  <a title="backlinks" class="hidden" href="http://www.robtex.com/dns/as-salam-college.netlify.app.html"></a>
+  <a title="backlinks" class="hidden" href="http://www.pageheat.com/heat/as-salam-college.netlify.app"></a>
+  <a title="backlinks" class="hidden" href="https://www.urltrends.com/rank/as-salam-college.netlify.app"></a>
+  <a title="backlinks" class="hidden" href="http://www.websiteaccountant.nl/as-salam-college.netlify.app"></a>
   <!-- Scripts links -->
   <script src="js/popper.min.js"></script>
   <script src="js/bootstrap.min.js"></script>
