--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
                 </li>
                 <li><a class="dropdown-item" href="#about">عنا</a></li>
                 <li><a class="dropdown-item" href="#history">تاريخنا</a></li>
-                <li><a class="dropdown-item" href="#activity">الأنشطة</a></li>
+                <li><a class="dropdown-item" href="#statistics">إحصائيات</a></li>
                 <li><a class="dropdown-item" href="#comments">التعليقات</a></li>
               </ul>
             </li>
@@ -192,56 +192,65 @@
       </div>
     </div>
   </section>
-  <!-- * Activity Section - Amr -->
-  <section id="activity" class="py-5 text-center align-items-center bg-dark">
-    <h2 class="special-heading mt-md-4">الأنشطة</h2>
+  <!-- * statistics Section - Amr -->
+  <section id="statistics" class="py-5 text-center align-items-center bg-dark">
+    <h2 class="special-heading mt-md-4">احصائيات</h2>
+    <h3 class="mt-4 fs-4 fw-normal text-muted">هذه الإحصائيات تعود إلي العام الدراسي 2021/2022م</h3>
     <div class="container px-4">
-      <div class="row row-cols-1 row-cols-md-2 justify-content-center align-items-md-center g-5 py-5">
+      <!-- <div class="row row-cols-1 row-cols-md-2 justify-content-center align-items-md-center g-5 py-5">
         <div class="d-flex flex-column align-items-start text-light gap-2 rtl">
-          <h3 class="fw-bold">هذا النص هو مثال لنص يمكن استبداله في نفس المساحة.</h3>
           <p class="text-muted">هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
             العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها
             التطبيق. </p>
-        </div>
-        <div class="row row-cols-1 row-cols-sm-2 g-4">
-          <div class="d-flex flex-column gap-2 hoverbg3 border border-muted border-2">
+        </div> -->
+        <!-- <div class="row row-cols-1 row-cols-sm-2 g-4"> -->
+        <div class="d-flex flex-column flex-md-row align-items-center justify-content-between ">
+          <div class="d-flex flex-column gap-2 py-5">
             <div
-              class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
-              <i class="text-light bi bi-rocket-fill"></i>
+              class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
+                            <i class="bi bi-person-fill text-white"></i>
+
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="71">0</div>
             </div>
-            <h4 class="fw-semibold text-light text-hover mb-0">.أبجد هوز حطى</h4>
-            <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
-              المتعة ، من الصعب</p>
+            <h4 class="fw-semibold text-light text-hover mb-0">العاملين بالمدرسة</h4>
+            <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
+              المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 hoverbg3 border border-muted border-2">
+          <div class="d-flex flex-column gap-2 py-5">
             <div
-              class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
-              <i class="text-light bi bi-person-plus-fill"></i>
+              class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
+                            <i class="bi bi-people-fill text-white"></i>
+
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="612">0</div>
             </div>
-            <h4 class="fw-semibold text-light text-hover mb-0">.أبجد هوز حطى</h4>
-            <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
-              المتعة ، من الصعب</p>
+            <h4 class="fw-semibold text-light text-hover mb-0">طلاب المرحلة الإعدادية</h4>
+            <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
+              المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 hoverbg3 border border-muted border-2">
+          <div class="d-flex flex-column gap-2 py-5">
             <div
-              class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
-              <i class="text-light bi bi-book"></i>
+              class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
+                            <i class="bi bi-people-fill text-white"></i>
+
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="562">0</div>
             </div>
-            <h4 class="fw-semibold text-light text-hover mb-0">.أبجد هوز حطى</h4>
-            <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
-              المتعة ، من الصعب</p>
+            <h4 class="fw-semibold text-light text-hover mb-0">طلاب المرحلة الثانوية</h4>
+            <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
+              المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 hoverbg3 border border-muted border-2">
+          <div class="d-flex flex-column gap-2 py-5">
             <div
-              class="feature-icon-small d-inline-flex align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
-              <i class="text-light bi bi-check2-square"></i>
+              class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
+                            <i class="bi bi-person-video3 text-white"></i>
+
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="24">0</div>
             </div>
-            <h4 class="fw-semibold text-light text-hover mb-0">.أبجد هوز حطى</h4>
-            <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
-              المتعة ، من الصعب</p>
+            <h4 class="fw-semibold text-light text-hover mb-0">فصل</h4>
+            <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
+              المتعة ، من الصعب</p> -->
           </div>
         </div>
       </div>
