--- a/pages/dross.html
+++ b/pages/dross.html
@@ -38,7 +38,7 @@
                                 </li>
                                 <li><a class="dropdown-item" href="../index.html#about">عنا</a></li>
                                 <li><a class="dropdown-item" href="../index.html#history">تاريخنا</a></li>
-                                <li><a class="dropdown-item" href="../index.html#activity">الأنشطة</a></li>
+                                <li><a class="dropdown-item" href="../index.html#statistics">إحصائيات</a></li>
                                 <li><a class="dropdown-item" href="../index.html#comments">التعليقات</a></li>
                             </ul>
                         </li>
