--- a/index.html
+++ b/index.html
@@ -210,7 +210,7 @@
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-person-fill text-white"></i>
 
-              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="71">0</div>
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" data-goal="71">0</div>
             </div>
             <h4 class="fw-semibold text-light text-hover mb-0">العاملين بالمدرسة</h4>
             <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
@@ -222,7 +222,7 @@
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-people-fill text-white"></i>
 
-              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="612">0</div>
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" data-goal="612">0</div>
             </div>
             <h4 class="fw-semibold text-light text-hover mb-0">طلاب المرحلة الإعدادية</h4>
             <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
@@ -234,7 +234,7 @@
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-people-fill text-white"></i>
 
-              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="562">0</div>
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" data-goal="562">0</div>
             </div>
             <h4 class="fw-semibold text-light text-hover mb-0">طلاب المرحلة الثانوية</h4>
             <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
@@ -246,7 +246,7 @@
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-person-video3 text-white"></i>
 
-              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" akhi="24">0</div>
+              <div class="value border border-main border-2 p-2 m-3 rounded text-light fw-bold" data-goal="24">0</div>
             </div>
             <h4 class="fw-semibold text-light text-hover mb-0">فصل</h4>
             <!-- <p class="text-muted">.أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض
