--- a/index.html
+++ b/index.html
@@ -120,11 +120,10 @@
 
   <!-- landing section -Boody -->
   <main id="main" class="text-center rtl">
-    <div class="text w-100 text-light text-center p-4">
-      <h1 class="h3 text-capitalize py-3">كلية السلام الرسمية للغات بنين</h1>
-      <p class="container rtl">
-        هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص العربى، حيث يمكنك أن تولد
-        مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف التى يولدها التطبيق.
+    <div class="text d-flex flex-column align-items-center w-100 text-light text-center p-4">
+      <h1 class="h3 text-dark text-capitalize py-3 bg-main opacity-90 w-50 roundcorner">كلية السلام الرسمية للغات بنين</h1>
+      <p class="container rtl fs-5">
+        <span class="fw-bold fs-2">مرحبا </span>بكم في موقع مدرسة كلية السلام الرسمية لغات بنين سننعرفون من خلال هذا الموقع علي تاريخ مدرستنا العريقة و أهميتها في بناء أجيال من الطلاب قادرين علي تحقيق التقدم لمصر
       </p>
     </div>
   </main>
@@ -139,16 +138,14 @@
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">مهمتنا</div>
               <div class="card-text lead">
-                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة ، من الصعب
-              </div>
+تربية الطلاب قبل تعلميهم و مساعدتهم علي تحقيق أهدافهم داعمينهم معنويا و علميا و تربويا              </div>
             </div>
           </div>
           <div class="card bg-main hoverbg p-3 m-2 m-md-0 mb-md-2">
             <div class="card-body text-center">
               <div class="card-title text-capitalize h4">رؤيتنا</div>
               <div class="card-text lead">
-                .أبجد هوز حطى كلمن هوى ، إجراءات المراقبة المعززة. التوازن ، الاحتياجات الأكبر لرفض المتعة ، من الصعب
-              </div>
+تخريج جيل قادر علي التقدم و العمل و التفوق في جميع المجالات عاشق للمنافسة علي أعلي المناصب              </div>
             </div>
           </div>
         </div>
@@ -168,22 +165,24 @@
         </div>
         <div class="m-3 w-75">
           <p class="rtl lead text-end">
-            تأسست المدرسة في 24 أبريل 1936 كمدرسة تبشيرية إنجليزية. إنها من أكبر مدارس اللغة الإنجليزية في مصر الجديدة.
-            كان يقع في قصر القبة على عقار بمساحة 5 أفدنة تم شراؤه مقابل 11000 جنيه إسترليني. تبرع بالمال أصدقاء من
-            إنجلترا ومصر. كان اسم المدرسة هو English Mission College وظل كذلك حتى عام 1956 عندما سلم المبشرون
-            البريطانيون المدرسة إلى الكنيسة الأسقفية في مصر. في الأيام الأولى ، كانت المدرسة تسجل طلابًا من الطبقة
-            البرجوازية بشكل أساسي. منحت الحكومة البريطانية المدرسة 1500 جنيه إسترليني في عام 1939 لتوسيع الحرم
-            الجامعي.
+            قد أنشأت مدرسة "إنجلش ميشن" عام 1936 تحت اسم البعثة الإنجليزية، أو إنجلش ميشن، و يطلق عليها أيضاً مدرسة كلية السلام، و تتميز تلك المدرسة بالانضباط في التعليم و الأخلاق و الزى المدرسي.
+            <br>
+            في 24 أبريل 1936 ،تم وضع حجر الأساس لمدرستي البنين و البنات، و في يونيو 1938 ، تم وضع حجر الأساس للمدرسة الإبتدائية و اعتبر هذا التاريخ بداية التكامل للكلية بمختلف مراحلها. 
+            <br>
             <span id="dots">...</span><span id="more">
-
-              وهي مقسمة إلى روضة أطفال ومدرسة إعدادية مختلطة ومدرستين منفصلتين لكل جنس في المرحلتين الإعدادية والثانوية.
-              يحتوي على حديقة ومرآب كبير للحافلات.
-
-              في عام 1956 ، تم تغيير الاسم إلى Episcopal Mission College. في عام 1958 ، تم تغيير اسم المدرسة إلى كلية
-              السلام من قبل وزارة التربية والتعليم المصرية التي سيطرت على جميع المدارس البريطانية والفرنسية في مصر.
-              (<a class="ltr fw-normal" target="_blank" rel="noopener"
-                href="https://en.wikipedia.org/wiki/As-Salam_College">ikipedia<i class="bi bi-wikipedia"
-                  aria-hidden="true"></i></a>)
+            و من اشهر مديرى المدرسة في عهدها القديم ميس لندا سليمان و التي تم تكريمها من السيد الرئيس / عبدالفتاح السيسى في عام 2018 لانها تعتبر من رواد التعليم في مصر و تسمى ايضا معلمة الوزراء.
+            <br>
+            <br>
+            و من أبرز الوزراء خريجي المدرسة :-
+            <br>
+              1. د/ هشام عرفات وزير النقل و المواصلات السابق
+              <br>
+              2. د/ هالة السعيد وزيرة التخطيط
+              <br>
+              3. د/ خالد عبدالغفار وزير التعليم العالي السابق
+              <br>
+              4. د/ نادية زخارى وزيرة البحث العلمي السابقة
+              <br>
             </span>
           </p>
           <button class="btn btn-light border-1 border-dark text-nowrap" onclick="readfunction()" id="readbutton">Read
