--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -78,17 +78,10 @@
             <!-- Start Portfolio -->
             <div class="portfolio">
                 <div class="container">
-                    <div class="mt-5">
-                        <p class="rtl">
-                            هذا النص هو مثال لنص يمكن أن يستبدل في نفس المساحة، لقد تم توليد هذا النص من مولد النص
-                            العربى، حيث يمكنك أن تولد مثل هذا النص أو العديد من النصوص الأخرى إضافة إلى زيادة عدد الحروف
-                            التى يولدها التطبيق.
-                            إذا كنت تحتاج إلى عدد أكبر من الفقرات يتيح لك مولد النص العربى زيادة عدد الفقرات كما تريد،
-                            النص لن يبدو مقسما ولا يحوي أخطاء لغوية، مولد النص العربى مفيد لمصممي المواقع على وجه الخصوص
-                            كما يمكن استخدامه لتصاميم الجرافيكس.
+                        <p class="rtl text-muted">
+                           هذه بعض الإنجازات من الإنجازات التي لا   تعد ولا تحصي من تلك المدرسة العظيمة
                         </p>
-                    </div>
-                    <ul class="d-flex justify-content-center list-unstyled">
+                        <ul class="d-flex justify-content-center list-unstyled">
                         <li class="px-3 filterlist active">All</li>
                         <li class="px-3 filterlist">المدرسة</li>
                         <li class="px-3 filterlist">الإدارة</li>
@@ -96,61 +89,39 @@
                     </ul>
                 </div>
                 <div class="imgs-container justify-content-center d-flex flex-wrap gap-1 mt-2">
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="manage">
+                        <li>حصول مديرة المدرسة  علي المركز الخامس  بمسابقة الرائد المثالي</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="school">
+                        <li>حصول المدرسة علي المركز الثاني بمسابقة المكتب التنفيذي لاتحاد طلاب الإعدادي</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="students">
+                        <li>حصول الطالب / مروان ياسر متولي بالصف الثاني الثانوي علي المركز الثاني لطالب المثالي
+                        </li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="students">
+                        <li>حصول طلبة الملاحلة الإعدادية للمركز الأول بمسابقة أوائل الطلبة على مستوى الإدارة و التصعيد</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="students">
+                        <li>وصول طلاب الصف الثاني الثانوي للملركز الثاني بمسابقة أوائل الطلبة علي مستوى الإدارة و التصعيد</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="students">
+                        <li>فوز الطالب عبدالرحمن محمد على المركز السابع على مستوى الجمهورية بمسابقة تحدى القراءة العربى</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="manage , students">
+                        <li>حصول أ/أميرة عصام معلم تربية موسيقية هي و الطلاب علي العديد من الجوائز علي مستوى المديرية كما اطلق عليها لفب مايسترو المديرية</li>
                     </div>
-                    <div class="box">
-                        <img src="https://picsum.photos/300/150" alt="" />
-                        <div class="caption">
-                            <h4>عنوان الصورة</h4>
-                            <p>تفاصيل الصورة</p>
-                        </div>
+                    <div class="box" data-filter="school">
+                        <li>حصول المدرسة علي المركز الأول بمسابقة السيكودراما للمرحلة الثانوية على مستوى المديرية</li>
+                    </div>
+                    <div class="box" data-filter="school">
+                        <li>تركيب كاميرات بكل فصول المدرسة و جميع الأماكن التي لم يكن فيها كاميرات</li>
+                    </div>
+                    <div class="box" data-filter="school">
+                        <li>عمل محاضرات و ندوات متنوعة عن التنمر و التدخين و الوقاية من الأمراض و الاسغافات الأولية</li>
+                    </div>
+                    <div class="box" data-filter="school">
+                        <li>التواصل مع جميع طلاب المدرسة على جروبات الوتس اثناء انتشار فيروس كورونا</li>
                     </div>
                 </div>
             </div>
@@ -163,41 +134,40 @@
             <h2 class="special-heading mb-5 mt-5">المعلمون</h2>
             <div class="row justify-content-center">
                 <div class="card bg-light m-3" style="width:250px">
-                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar1.svg' />
+                    <img class="card-img-top circle-bg mt-3 hover-zoom align-self-center" alt="Card image"
+                        style="width:125px;height:125px;" src='../img/avatars/hijab.png' />
                     <div class="card-body">
-                        <h4 class="card-title text-dark">الأستاذه مريم</h4>
-                        <p class="card-text text-muted">هذا النص هو مثال لنص يمكن استبداله في نفس المساحة.
+                        <h4 class="card-title text-dark">الأستاذه نرمين</h4>
+                        <p class="card-text text-muted">مدرس اول مادة الأحياء و وتملك الكثير من المهارات في التعليم
                         </p>
                         <a href="#" class="btn btn-dark cardbuttonhover text-white">شاهد الملف الشخصي</a>
                     </div>
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
-                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar2.svg' />
+                    <img class="card-img-top circle-bg mt-3 hover-zoom align-self-center" alt="Card image"
+                        style="width:125px;height: 125px;" src='../img/avatars/businessman.png' />
                     <div class="card-body">
-                        <h4 class="card-title text-dark">الأستاذ محمد</h4>
-                        <p class="card-text text-muted">هذا النص هو مثال لنص يمكن استبداله في نفس المساحة.
+                        <h4 class="card-title text-dark">الأستاذ شريف</h4>
+                        <p class="card-text text-muted">مدرس اول عربي و يملك من المهارة العالية في توجيه المعلومة للطلاب
                         </p>
                         <a href="#" class="btn btn-dark cardbuttonhover text-white">شاهد الملف الشخصي</a>
                     </div>
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
-                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar3.svg' />
+                    <img class="card-img-top circle-bg mt-3 hover-zoom align-self-center" alt="Card image"
+                        style="width:125px;height: 125px;" src='../img/avatars/businessman.png' />
                     <div class="card-body">
-                        <h4 class="card-title text-dark">الأستاذه أسماء</h4>
-                        <p class="card-text text-muted">هذا النص هو مثال لنص يمكن استبداله في نفس المساحة.
-                        </p>
+                        <h4 class="card-title text-dark">الأستاذ أحمد علي</h4>
+                        <p class="card-text text-muted">مدرس لغة انجليزية و متميز جدا حيث يعلم الطلاب بطرق ممتعة</p>
                         <a href="#" class="btn btn-dark cardbuttonhover text-white">شاهد الملف الشخصي</a>
                     </div>
                 </div>
                 <div class="card bg-white m-3" style="width:250px">
-                    <img class="card-img-top hover-zoom align-self-center" alt="Card image"
-                        style="width:10rem;height: 10rem;" src='../img/avatars/avatar4.svg' />
+                    <img class="card-img-top circle-bg mt-3 hover-zoom align-self-center" alt="Card image"
+                        style="width:125px;height: 125px;" src='../img/avatars/businessman.png' />
                     <div class="card-body">
-                        <h4 class="card-title text-dark">الأستاذ صلاح</h4>
-                        <p class="card-text text-muted">هذا النص هو مثال لنص يمكن استبداله في نفس المساحة.
+                        <h4 class="card-title text-dark">الأستاذ حسام</h4>
+                        <p class="card-text text-muted">مدرس اول مادة جغرافيا و ذو معرفة عظيمة لديه الكثير من الخبرة لتعليم الطلاب
                         </p>
                         <a href="#" class="btn btn-dark cardbuttonhover text-white">شاهد الملف الشخصي</a>
                     </div>
@@ -265,7 +235,7 @@
                 <div class="col-md-4 mt-4 hoverbg2 text-light">
                     <div class="address-block contact-meta-block">
                         <i class="d-inline fs-4 bi bi-pin-map-fill"></i>
-                        <h4 class="d-inline">مكاننا</h4>
+                        <h4 class="d-inline">العنوان</h4>
                         <p class="arabic text-md-center">
                             5 متفرع من، جسر السويس <br />
                             سراى القبة، محافظة القاهرة <br />
@@ -284,7 +254,7 @@
                 <div class="col-md-4 mt-4 hoverbg2 text-light">
                     <div class="social-icons-block contact-meta-block">
                         <i class="d-inline fs-4 bi bi-chat-dots-fill"></i>
-                        <h4 class="d-inline">نحن اجتماعيون</h4>
+                        <h4 class="d-inline">حساباتنا</h4>
                         <ul class="ms-md-2 list-inline social-icon">
                             <li class="list-inline-item">
                                 <a href="#"><i class="fs-2 text-muted bi bi-facebook"></i></a>
@@ -296,7 +266,7 @@
                                 <a href="#"><i class="fs-2 text-muted bi bi-messenger"></i></a>
                             </li>
                             <li class="list-inline-item">
-                                <a href="#"><i class="fs-2 text-muted bi bi-linkedin"></i></a>
+                                <a href="#"><i class="m-2 fs-2 text-muted bi bi-linkedin"></i></a>
                             </li>
                         </ul>
                     </div>
@@ -311,7 +281,7 @@
     <!-- Footer -->
 
     <footer
-        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
+        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth ltr">
         <p class="col-md-4 mb-0 mfooter text-light rtl">
             &lt;
             <span class="text-purple">تم تطويره بواسطة</span>
