--- a/pages/dross.html
+++ b/pages/dross.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 
 <head>
     <meta charset="UTF-8">
@@ -192,7 +192,7 @@
     <!-- Footer -->
 
     <footer
-        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
+        class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth ltr">
         <p class="col-md-4 mb-0 mfooter text-light">
             &lt;
             <span class="text-purple">تم تطويره بواسطة</span>
