--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="ar">
+<html lang="ar" dir="rtl">
 
 <head>
   <!-- HTML Meta Tags -->
@@ -121,7 +121,7 @@
   <!-- landing section -Boody -->
   <main id="main" class="text-center rtl">
     <div class="text d-flex flex-column align-items-center w-100 text-light text-center p-4">
-      <h1 class="h3 text-dark text-capitalize py-3 bg-main opacity-90 w-50 roundcorner">كلية السلام الرسمية للغات بنين</h1>
+      <h1 class="h3 text-dark text-capitalize py-3 bg-main opacity-90 w-50 roundcorner rainbow">كلية السلام الرسمية للغات بنين</h1>
       <p class="container rtl fs-5">
         <span class="fw-bold fs-2">مرحبا </span>بكم في موقع مدرسة كلية السلام الرسمية لغات بنين سننعرفون من خلال هذا الموقع علي تاريخ مدرستنا العريقة و أهميتها في بناء أجيال من الطلاب قادرين علي تحقيق التقدم لمصر
       </p>
@@ -204,7 +204,7 @@
         </div> -->
         <!-- <div class="row row-cols-1 row-cols-sm-2 g-4"> -->
         <div class="d-flex flex-column flex-md-row align-items-center justify-content-between ">
-          <div class="d-flex flex-column gap-2 py-5">
+          <div class="d-flex flex-column gap-2 box2 py-5">
             <div
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-person-fill text-white"></i>
@@ -216,7 +216,7 @@
               المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 py-5">
+          <div class="d-flex flex-column gap-2 box2 py-5">
             <div
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-people-fill text-white"></i>
@@ -228,7 +228,7 @@
               المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 py-5">
+          <div class="d-flex flex-column gap-2 box2 py-5">
             <div
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-people-fill text-white"></i>
@@ -240,7 +240,7 @@
               المتعة ، من الصعب</p> -->
           </div>
 
-          <div class="d-flex flex-column gap-2 py-5">
+          <div class="d-flex flex-column gap-2 box2 py-5">
             <div
               class="feature-icon-small d-flex flex-column align-items-center justify-content-center text-bg-primary fs-4 rounded-3">
                             <i class="bi bi-person-video3 text-white"></i>
@@ -317,8 +317,8 @@
   <div id="headmasterword"
     class="align-self-center container-md bg-dark roundcorner py-4 mb-5 mx-md-auto text-center w-90">
     <div>
-      <img alt="headmaster image" class="hover-zoom align-self-center m-3" style="width:10rem;height: 10rem;"
-        src="img/avatars/avatar5.svg">
+      <img alt="headmaster image" class="hover-zoom align-self-center m-3 circle-bg" style="width:10rem;height: 10rem;"
+        src="img/avatars/hijab.png">
       <span class="text-muted d-block mb-3 fw-bold">الأستاذة الفاضلة/ شاهيناز عبدالحميد</span>
       <h2 class="special-heading">كلمة من مديرة المدرسة</h2>
       alt="headmaster image">
@@ -336,7 +336,7 @@
   <!-- Footer -->
 
   <footer
-    class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth">
+    class="d-flex flex-wrap justify-content-center justify-content-lg-between align-items-center p-2rem  bg-fourth ltr">
     <p class="col-md-4 mb-0 mfooter text-light rtl">
       &lt;
       <span class="text-purple">تم تطويره بواسطة</span>
