--- a/pages/dross.html
+++ b/pages/dross.html
@@ -104,7 +104,7 @@
             </div>
         </div>
         <div id="prep2" class="tabcontent pb-5">
-            <h1 class="special-heading my-5 ">الصف ألثاني الإعدادي</h1>
+            <h1 class="special-heading my-5 ">الصف الثاني الإعدادي</h1>
             <p class="py-3">هذا هو جدول مواعيد مجموعات التقوية بالمدرسة علي من يريد الإشتراك تسجيل اسمه</p>
 
 
