orgainized functions and scroll to top css only

--- a/index.html
+++ b/index.html
@@ -115,7 +115,6 @@
     </nav>
   </header>
   <!-- Scroll to Top Button -->
-  <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button>
 
 
   <!-- landing section -Boody -->
@@ -355,7 +354,11 @@
       </li>
     </ul>
   </footer>
-
+  <div class="btn-cont">
+    <button id="myBtn" title="Go to top">
+      <i class="bi bi-arrow-up"></i>
+    </button>
+  </div>
   <!-- backlinks -->
   <a title="backlinks" class="hidden" href="http://www.alexa.com/siteinfo/as-salam-college.netlify.app"></a>
   <a title="backlinks" class="hidden" href="http://www.robtex.com/dns/as-salam-college.netlify.app.html"></a>
@@ -367,8 +370,7 @@
   <script src="js/bootstrap.min.js"></script>
   <script src="js/script.js"></script>
   <script>
-    counter()
-    scrollTop()
+    counter();
   </script>
 </body>
 
