--- a/pages/achievement.html
+++ b/pages/achievement.html
@@ -110,9 +110,11 @@
     </header>
 
     <!-- Scroll to Top Button -->
-    <button onclick="topFunction()" id="myBtn" title="Go to top">
-      <i class="bi bi-arrow-up"></i>
-    </button>
+    <div class="btn-cont">
+      <button id="myBtn" title="Go to top">
+        <i class="bi bi-arrow-up"></i>
+      </button>
+    </div>
 
     <!--* Achievement section -Amr -->
     <section
@@ -490,7 +492,6 @@
     <script>
       filter();
       animation();
-      scrollTop();
       // Get the element with id="defaultOpen" and click on it
       document.getElementById("defaultOpen").click();
     </script>
