--- a/pages/dross.html
+++ b/pages/dross.html
@@ -68,10 +68,11 @@
 
     </header>
     <!-- Scroll to Top Button -->
-    <!-- <button onclick="topFunction()" id="myBtn" title="Go to top"><i class="bi bi-arrow-up"></i></button> -->
-
-
-
+    <div class="btn-cont">
+        <button id="myBtn" title="Go to top">
+            <i class="bi bi-arrow-up"></i>
+        </button>
+    </div>
 
     <section class="fullpage d-flex justify-content-center flex-column container align-content-center text-center">
         <div class="tab pb-3 rtl">
